deploy/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-portal
  namespace: student-portal
  labels:
    app: student-portal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-portal
  template:
    metadata:
      labels:
        app: student-portal
    spec:
      containers:
      - name: flask
        image: 216989097838.dkr.ecr.us-east-1.amazonaws.com/student-portal:1.0
        imagePullPolicy: Always 
        ports:
        - containerPort: 8000
